# TabuLLM

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
TabuLLM/: cluster.py  cluster_old.py  compress.py  embed.py  embed_old.py  explain.py
dev/cluster/: dev_skmeans_improved.ipynb  dev_skmeans_return_hard_labels.ipynb
dev/compress/: dev_compress_regressor.ipynb  dev_make_pipeline_INCOMPLETE.ipynb  test_grid_search_compress_classifier.ipynb  test_sklearn_target_encoder.ipynb
dev/embed/: dev_TextColumnTransformer_refactoring.ipynb  dev_prep_X.ipynb  embed_google_basic_test.ipynb  embed_openai_basic_test.ipynb
dev/explain/: dev_modify_generate_prompt.ipynb  dev_one_vs_rest_regression.ipynb  dev_openai_structured_output.ipynb  google_text_completion.ipynb  transformer_text_completion.ipynb
dev/langchain/: dev_embed.ipynb  dev_explain.ipynb  dev_explain_old.ipynb  embed.ipynb  langchain_embed.py  langchain_explain.py  test_chat.ipynb  test_parser.ipynb
dev/misc/: test_minted.tex  test_pythontex.tex  test_pythontex_2.tex
dev/misc/jss/: pythontex.tex
docs/source/: TabuLLM.rst  conf.py  index.rst  modules.rst  overview_embed.ipynb
examples/: 01_cluster_explanations.json  01_fraud_detection_walkthrough.ipynb  02_advanced_pipelines.ipynb
manuscript/jss/: tabullm.bib  tabullm.tex  tabullm_notebook.ipynb
notebooks/: advanced.ipynb  cluster.ipynb  compress.ipynb  explain.ipynb  overview_embed.ipynb  skmeans.ipynb  tutorial.ipynb
paper_experiments/: .env.example  .gitignore  README.md  download_embeddings.py  download_results.py  generate_embeddings.py  paper-requirements.txt  requirements-paper.txt  summarise_results.py
paper_experiments/col_sweep/: plot_col_sweep.py  run_col_sweep.py
paper_experiments/k_sweep/: plot_k_sweep.py  run_k_sweep.py
paper_experiments/results/t3_rolled/: fraud_rskf_bge-large_summary.csv  fraud_rskf_minilm_colsweep_summary.csv  fraud_rskf_minilm_summary.csv  fraud_rskf_none_summary.csv  fraud_rskf_openai-large_summary.csv  fraud_rskf_openai-small_summary.csv  fraud_rskf_tfidf_summary.csv  fraud_rskf_tfidf_svd1024_summary.csv  fraud_rskf_tfidf_svd1536_summary.csv  fraud_rskf_tfidf_svd3072_summary.csv
tabullm/: __init__.py  data.py  embed.py  explain.py
tabullm/cluster/: __init__.py  gmm_features.py  spherical_kmeans.py
tests/: test_cluster_explainer.py  test_embed.py  test_gmm_feature_extractor.py  test_spherical_kmeans.py  test_text_column_transformer.py
