[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["tabullm*"] } }

[project]
name = "tabullm"
version = "1.2.1"
description = "Seamless Feature Extraction and Interpretation of Text Columns in Tabular Data Using Large Language Models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alireza S. Mahani, Mansour T.A. Sharabiani", email = "alireza.s.mahani@gmail.com" }
]
keywords = ["text embedding", "large language models", "feature engineering", "cross-validation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "pydantic>=2.0",
    "langchain>=0.1",
    "langchain-core>=0.1",
    "langchain-community>=0.1",
]

[project.urls]
Homepage = "https://github.com/asmahani/TabuLLM"
Repository = "https://github.com/asmahani/TabuLLM"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]
examples = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.2",
    "langchain-huggingface>=0.1",
    "langchain-openai>=0.1",
    "langchain-aws>=0.2",
]
